--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>GlaceYT</title>
+    <title>Dreamy</title>
     <style>
         body {
-            background-image: url('https://cdn.discordapp.com/attachments/1170652474563117138/1224660177039396876/MULTI_MUSIC_v1.5.png?ex=661e4cab&is=660bd7ab&hm=f7a542462fabaf9c1530ece5aa72597cff3ac032876bba46df5ddba7e122ea99&');
+            background-image: url('https://cdn.discordapp.com/attachments/1212773181002354688/1231294678977216663/-Roles-_4.png?ex=66366f87&is=6623fa87&hm=8942d059714148b0158ed84e68c4a0767f0b6331399baea890350d14265c609e&');
             background-size: cover;
             background-repeat: no-repeat;
             margin: 0;
